# langchain_rag_demo

./: .gitignore  README.md  pyproject.toml
notebooks/: rag_pipeline_e2e.ipynb
src/api/: main.py
src/rag/: __init__.py  config.py  rag_chain.py
src/rag/chunking/: __init__.py  chunk_docs.py
src/rag/embeddings/: __init__.py  loader.py
src/rag/ingestion/: __init__.py  ingest_docs.py
src/rag/pipelines/: __init__.py  index.py  serve.py
src/rag/prompts/: __init__.py  loader.py  rag_answer_user.txt  system_rag.txt
src/rag/reranking/: reranker.py
src/rag/retrieval/: __init__.py  retrieve_docs.py
src/rag/vector_store/: __init__.py  store_documents.py
tests/: test_chunking.py  test_config.py
tests/e2e/: test_rag_golden.py
